--- a/logos.qrc
+++ b/logos.qrc
@@ -2,5 +2,6 @@
   <qresource prefix="logos">
     <file>media/ER.png</file>
     <file>media/Logo-UTSrd.png</file>
+    <file>media/2130.png</file>
   </qresource>
 </RCC>
